--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
                         title: 'Some title',
                         svgIcon: '<circle cx="12" cy="12" r="9" fill="none" fill-rule="evenodd" stroke="currentColor" stroke-width="2"/>',
                         onClick: () => {
-                            alert('Hi!')
+                            //
+                            await miro.board.widget.create({
+                                type: "sticker",
+                                text: "Hello",
+                                x: 10,
+                                y: 10
+                            })
                         }
                     }
                 }
