--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                         svgIcon: '<circle cx="12" cy="12" r="9" fill="none" fill-rule="evenodd" stroke="currentColor" stroke-width="2"/>',
                         onClick: () => {
                             //
+                            console.log("hello")
                             await miro.board.widget.create({
                                 type: "sticker",
                                 text: "Hello",
