--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                         onClick: () => {
                             //
                             console.log("hello")
-                            await miro.board.widget.create({
+                            miro.board.widget.create({
                                 type: "sticker",
                                 text: "Hello",
                                 x: 10,
