--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                             console.log("hello")
                             miro.board.widgets.create({
                                 "type": "sticker",
-                                "text": "some text",
-                                x: 1000,
-                                y: 10,
+                                "text": "桜です．春は",
+                                x: -1000,
+                                y: 1000,
                                 "capabilities": {
                                     "editable": false
                                 }
