--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                             console.log("hello")
                             miro.board.widgets.create({
                                 "type": "sticker",
-                                "text": "Cherry blossom",
+                                "text": "桜 blossom",
                                 x: -1000,
                                 y: 1000,
                                 "capabilities": {
