--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                             console.log("hello")
                             miro.board.widgets.create({
                                 "type": "sticker",
-                                "text": "桜 blossom",
+                                "text": "桜 桜．春春",
                                 x: -1000,
                                 y: 0,
                                 "capabilities": {
