--- a/json/index.html
+++ b/json/index.html
@@ -3,21 +3,28 @@
 
 <head>
     <script>
-        var request = new XMLHttpRequest();
-
-        request.open('GET', 'https://jsonplaceholder.typicode.com/users/1', true);
-        request.responseType = 'json';
-
-        request.onload = function() {
-            var data = this.response;
-            console.log(data);
+        const options = {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                Authorization: 'Bearer cZe9qmnM9PML1ZxDYSmsQsS3yHM'
+            },
+            body: JSON.stringify({
+                name: 'board-create',
+                sharingPolicy: {
+                    access: 'private',
+                    teamAccess: 'edit'
+                },
+                description: 'ボードをmiroに作ってみよう'
+            })
         };
 
-        request.send();
-    </script>
-</head>
 
-<body>
-</body>
+        fetch('https://api.miro.com/v1/boards?fields=createboard', options).then(response => console.log(response)).catch(err => console.error(err));
+
+        console.log("test");
+    </script>
+
+</head>
 
 </html>
