--- a/json/index.html
+++ b/json/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <script>
+    <script language="javascript" type="text/javascript">
         function onButtonClick() {
             const options = {
                 method: 'POST',
