--- a/json/index.html
+++ b/json/index.html
@@ -25,11 +25,14 @@
 
             console.log("test");
         }
+
+        let button = document.getElementById('mirob');
+        button.addEventListener('click', onButtonClick);
     </script>
 </head>
 
 <body>
-    <input type="button" value="Exec" onclick="OnButtonClick();" /><br />
+    <input type="button" value="Execute" id="mirob">
 
 
 </body>
