--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <html lang="en">
 
 <head>
+
+
+    <script type="text/javascript">
+        const canvas = documennt.createElement('Canvas');
+        document.body.appendChild(canvas);
+    </script>
     <script src="https://miro.com/app/static/sdk.1.1.js"></script>
     <script>
         miro.onReady(() => {
