--- a/json/index.html
+++ b/json/index.html
@@ -1,3 +1,5 @@
+Access-Control-Allow-Origin: https://amazing.site
+
 <!DOCTYPE html>
 <html>
 
@@ -7,32 +9,18 @@
 </body>
 
 <head>
-    <script language="javascript" type="text/javascript">
-        function onButtonClick() {
-            const options = {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    Authorization: 'Bearer cZe9qmnM9PML1ZxDYSmsQsS3yHM'
-                },
-                body: JSON.stringify({
-                    name: 'board-create',
-                    sharingPolicy: {
-                        access: 'private',
-                        teamAccess: 'edit'
-                    },
-                    description: 'ボードをmiroに作ってみよう'
-                })
-            };
+    <script src="https://miro.com/app/static/sdk.1.1.js"></script>
+    <script>
+        miro.onReady(() => {
+                    miro.createBoard() {
 
+                    }
+                }
+    </script>
 
-            fetch('https://api.miro.com/v1/boards?fields=createboard', options).then(response => console.log(response)).catch(err => console.error(err));
-
-            console.log("test");
-        }
-
-        let button = document.getElementById('mirob');
-        button.addEventListener('click', onButtonClick);
+    function onButtonClick() { const options = { method: 'POST', headers: { 'Content-Type': 'application/json', Authorization: 'Bearer cZe9qmnM9PML1ZxDYSmsQsS3yHM' }, body: JSON.stringify({ name: 'board-create', sharingPolicy: { access: 'private', teamAccess:
+    'edit' }, description: 'ボードをmiroに作ってみよう' }) }; fetch('https://api.miro.com/v1/boards?fields=createboard', options).then(response => console.log(response)).catch(err => console.error(err)); console.log("test"); } let button = document.getElementById('mirob');
+    button.addEventListener('click', onButtonClick);
     </script>
 </head>
 
