--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <script type="text/javascript">
         const canvas = documennt.createElement('Canvas');
+        console.log("canvas");
         document.body.appendChild(canvas);
     </script>
     <script src="https://miro.com/app/static/sdk.1.1.js"></script>
