--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 <head>
 
 
-    <script type="text/javascript">
-        const canvas = documennt.createElement('Canvas');
-        console.log("canvas");
-        document.body.appendChild(canvas);
-    </script>
+
     <script src="https://miro.com/app/static/sdk.1.1.js"></script>
     <script>
         miro.onReady(() => {
@@ -39,5 +35,10 @@
         })
     </script>
 </head>
+
+<body>
+    const canvas = document.createElement('canvas'); document.body.appendChild(cannvas);
+
+</body>
 
 </html>
