--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
                 }
             })
         })
+        const canvas = document.createElement('canvas');
+        document.body.appendChild(cannvas);
+        console.log("haha")
     </script>
 </head>
 
 <body>
-    const canvas = document.createElement('canvas'); document.body.appendChild(cannvas); console.log("haha")
+
 
 </body>
 
