--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         miro.onReady(() => {
 
             const canvas = document.createElement('canvas');
-            document.body.appendChild(cannvas);
+            document.body.appendChild(canvas);
             console.log("haha")
 
             miro.initialize({
